// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styling and specificity Dynamic imports - development mode (style-loader) on mobile theme A should be styled correctly 1`] = `
Object {
  "background-color": "yellow",
  "display": "flex",
  "height": "100px",
  "width": "100px",
}
`;

exports[`Styling and specificity Dynamic imports - development mode (style-loader) on mobile theme B should be styled correctly 1`] = `
Object {
  "background-color": "red",
  "display": "flex",
  "height": "100px",
  "width": "100px",
}
`;

exports[`Styling and specificity Dynamic imports - mini-css-extract-loader on mobile theme A should be styled correctly 1`] = `
Object {
  "background-color": "#ff0",
  "display": "flex",
  "height": "100px",
  "width": "100px",
}
`;

exports[`Styling and specificity Dynamic imports - mini-css-extract-loader on mobile theme B should be styled correctly 1`] = `
Object {
  "background-color": "red",
  "display": "flex",
  "height": "100px",
  "width": "100px",
}
`;

exports[`Styling and specificity Dynamic imports - style-loader on mobile theme A should be styled correctly 1`] = `
Object {
  "background-color": "#ff0",
  "display": "flex",
  "height": "100px",
  "width": "100px",
}
`;

exports[`Styling and specificity Dynamic imports - style-loader on mobile theme B should be styled correctly 1`] = `
Object {
  "background-color": "red",
  "display": "flex",
  "height": "100px",
  "width": "100px",
}
`;

exports[`Styling and specificity Simple - development mode (style-loader) -  on desktop and hovered should be styled correctly 1`] = `
Object {
  "background-color": "purple",
  "color": "green",
  "display": "flex",
  "height": "100px",
  "position": "absolute",
  "width": "100px",
  "z-index": "2",
}
`;

exports[`Styling and specificity Simple - development mode (style-loader) -  on desktop should be styled correctly 1`] = `
Object {
  "color": "green",
  "display": "flex",
  "height": "100px",
  "position": "absolute",
  "width": "100px",
  "z-index": "2",
}
`;

exports[`Styling and specificity Simple - development mode (style-loader) -  on mobile should be styled correctly 1`] = `
Object {
  "color": "red",
  "display": "flex",
  "height": "100px",
  "position": "absolute",
  "width": "100px",
  "z-index": "2",
}
`;

exports[`Styling and specificity Simple - mini-css-extract-loader -  on desktop and hovered should be styled correctly 1`] = `
Object {
  "background-color": "purple",
  "color": "green",
  "display": "flex",
  "height": "100px",
  "position": "absolute",
  "width": "100px",
  "z-index": "2",
}
`;

exports[`Styling and specificity Simple - mini-css-extract-loader -  on desktop should be styled correctly 1`] = `
Object {
  "color": "green",
  "display": "flex",
  "height": "100px",
  "position": "absolute",
  "width": "100px",
  "z-index": "2",
}
`;

exports[`Styling and specificity Simple - mini-css-extract-loader -  on mobile should be styled correctly 1`] = `
Object {
  "color": "red",
  "display": "flex",
  "height": "100px",
  "position": "absolute",
  "width": "100px",
  "z-index": "2",
}
`;

exports[`Styling and specificity Simple - style-loader -  on desktop and hovered should be styled correctly 1`] = `
Object {
  "background-color": "purple",
  "color": "green",
  "display": "flex",
  "height": "100px",
  "position": "absolute",
  "width": "100px",
  "z-index": "2",
}
`;

exports[`Styling and specificity Simple - style-loader -  on desktop should be styled correctly 1`] = `
Object {
  "color": "green",
  "display": "flex",
  "height": "100px",
  "position": "absolute",
  "width": "100px",
  "z-index": "2",
}
`;

exports[`Styling and specificity Simple - style-loader -  on mobile should be styled correctly 1`] = `
Object {
  "color": "red",
  "display": "flex",
  "height": "100px",
  "position": "absolute",
  "width": "100px",
  "z-index": "2",
}
`;

exports[`Styling and specificity Themed - development mode (style-loader) should be styled correctly with theme one 1`] = `
Object {
  "background-color": "yellow",
  "border-bottom-color": "pink",
  "border-bottom-style": "solid",
  "border-bottom-width": "6px",
  "display": "flex",
  "height": "12px",
  "line-height": "6",
  "z-index": "3",
}
`;

exports[`Styling and specificity Themed - development mode (style-loader) should be styled correctly with theme two 1`] = `
Object {
  "background-color": "red",
  "border-bottom-color": "pink",
  "border-bottom-style": "solid",
  "border-bottom-width": "8px",
  "display": "flex",
  "height": "8px",
  "line-height": "4",
  "z-index": "3",
}
`;

exports[`Styling and specificity Themed - mini-css-extract-loader should be styled correctly with theme one 1`] = `
Object {
  "background-color": "#ff0",
  "border-bottom": "6px solid pink",
  "border-bottom-color": "pink",
  "border-bottom-style": "solid",
  "border-bottom-width": "6px",
  "display": "flex",
  "height": "12px",
  "line-height": "6",
  "z-index": "3",
}
`;

exports[`Styling and specificity Themed - mini-css-extract-loader should be styled correctly with theme two 1`] = `
Object {
  "background-color": "red",
  "border-bottom": "8px solid pink",
  "border-bottom-color": "pink",
  "border-bottom-style": "solid",
  "border-bottom-width": "8px",
  "display": "flex",
  "height": "8px",
  "line-height": "4",
  "z-index": "3",
}
`;

exports[`Styling and specificity Themed - style-loader should be styled correctly with theme one 1`] = `
Object {
  "background-color": "#ff0",
  "border-bottom": "6px solid pink",
  "border-bottom-color": "pink",
  "border-bottom-style": "solid",
  "border-bottom-width": "6px",
  "display": "flex",
  "height": "12px",
  "line-height": "6",
  "z-index": "3",
}
`;

exports[`Styling and specificity Themed - style-loader should be styled correctly with theme two 1`] = `
Object {
  "background-color": "red",
  "border-bottom": "8px solid pink",
  "border-bottom-color": "pink",
  "border-bottom-style": "solid",
  "border-bottom-width": "8px",
  "display": "flex",
  "height": "8px",
  "line-height": "4",
  "z-index": "3",
}
`;

exports[`Styling and specificity Unused modules - development mode (style-loader) should be styled correctly 1`] = `
Object {
  "display": "block",
  "height": "100px",
  "width": "100px",
}
`;

exports[`Styling and specificity Unused modules - mini-css-extract-loader should be styled correctly 1`] = `
Object {
  "display": "block",
  "height": "100px",
  "width": "100px",
}
`;

exports[`Styling and specificity Unused modules - style-loader should be styled correctly 1`] = `
Object {
  "display": "block",
  "height": "100px",
  "width": "100px",
}
`;
